books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -108,7 +108,9 @@
 >데드락의 발생 조건?
 >데드락은 운영체제에서에서 Mutual Exclusion, Hold&Wait, No preemption, Circular wait 조건이 모두 성립할때 발생한다.
 
->데드락 처리는?
+>ㅇㄹ
+>
+>>데드락 처리는?
 >데드락 처리에는 예방(Prevention), 회피(Avoidance) 그리고 탐지 및 회복(Detection & Recover) 방법이 있다.
 >예방(Prevention)은 교착 상태 발생 조건 중 하나를 제거함으로써 해결하는 방법으로 자원의 낭비가 심하다. 
 >회피(Avoidance)는 은행원 알고리즘 (Banker’s Algorithm)으로 데드락이 발생하지 않을 상황에서만 자원을 할당해줌으로써 데드락을 피한다. 
@@ -117,10 +119,11 @@
 # 서버
 
 > WAS와 Web Server의 차이
-> WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하기 위해 사용한다. 일반적으로 WAS는 WebServer와 WebContainer(Servelet Container)로 구성된다. 
+>WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하기 위해 사용한다. 일반적인 WAS는 WebServer WebContainer(Servelet Container)로 구성된다. 
 > Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 기능이 가볍다. 아파치 서버, Nginx가 대표적이다. 
 
-> WebContainer(Servelet Container
+> WebContainer(Servelet Container)와 Servele은 어떤 관계?
+> 
 
 >동기와 비동기처리의 차이 
 
@@ -134,7 +137,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMxNTk5NDQxOSwtMTA4MzgwNTg1MywtMT
-Y2MTkwMzc2OCwxNjU2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3
-MTc3MF19
+eyJoaXN0b3J5IjpbMTg0OTU0MjM5MywtMzE1OTk0NDE5LC0xMD
+gzODA1ODUzLC0xNjYxOTAzNzY4LDE2NTY5OTg2NjIsMTc3Mjc2
+OTg4MiwtNTkzODcxNzcwXX0=
 -->
