--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -121,9 +121,9 @@
 >WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하기 위해 사용한다. 일반적인 WAS는 WebServer WebContainer(Servelet Container)로 구성된다. 
 > Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 기능이 가볍다. 아파치 서버, Nginx가 대표적이다. 
 
->> WebContainer(Servelet Container)와 Servelet은 어떤 관계?
+>> WebContainer(Servelet Container)의 역할은?
 >
-> WebContainer는 Servelet을 관리한다. 
+> WebContainer는 WAR(WebApplication Archive)을 불러들여 그에 대응하는 Servelet을 관리한다. 
 
 >동기와 비동기처리의 차이 
 
@@ -137,7 +137,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1ODkwNDQyNywtMzE1OTk0NDE5LC0xMD
+eyJoaXN0b3J5IjpbMjA1ODc4ODgzMiwtMzE1OTk0NDE5LC0xMD
 gzODA1ODUzLC0xNjYxOTAzNzY4LDE2NTY5OTg2NjIsMTc3Mjc2
 OTg4MiwtNTkzODcxNzcwXX0=
 -->
