--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -123,7 +123,7 @@
 
 >> WebContainer(Servelet Container)의 역할은?
 >
-> WebContainer는 WAR(WebApplication Archive)을 불러들여 그에 대응하는 Servelet을 관리한다. 요청에 맞는 
+> WebContainer는 사용하려는 애플리케이션을 불러들과 Servelet을 관리한다. 요청에 맞는 
 
 >동기와 비동기처리의 차이 
 
@@ -137,7 +137,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDkzMTI1MzEsLTMxNTk5NDQxOSwtMT
+eyJoaXN0b3J5IjpbLTExMzMzMjYwODIsLTMxNTk5NDQxOSwtMT
 A4MzgwNTg1MywtMTY2MTkwMzc2OCwxNjU2OTk4NjYyLDE3NzI3
 Njk4ODIsLTU5Mzg3MTc3MF19
 -->
