--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -123,7 +123,7 @@
 
 >> WebContainer(Servelet Container)의 역할은?
 >
-> WebContainer는 사용하려는 애플리케이션을 불러들과 Servelet을 관리한다. 요청에 맞는 
+> WebContainer는 사용하려는 웹 애플리케이션에 정의된 web.xml을 바탕으로 웹 애플리케이션으로 필요로 하는 Servelet을 생성하고 관리한다.
 
 web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 있다. 단순하게 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너이다. 대표적인 서블릿 컨테이너로는 Tomcat이 있다. 서블릿 컨테이너는 다른말로 웹 컨테이너, 웹 어플리케이션 서버 라고도 불린다.
 
@@ -151,7 +151,7 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc3NDQ3NjQ0NywtMzE1OTk0NDE5LC0xMD
+eyJoaXN0b3J5IjpbLTg5NjM0NjcwMywtMzE1OTk0NDE5LC0xMD
 gzODA1ODUzLC0xNjYxOTAzNzY4LDE2NTY5OTg2NjIsMTc3Mjc2
 OTg4MiwtNTkzODcxNzcwXX0=
 -->
