books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -123,9 +123,7 @@
 
 >> WebContainer(Servelet Container)의 역할은?
 >
-> WebContainer는 사용하려는 웹 애플리케이션에 정의된 web.xml을 바탕으로 웹 애플리케이션으로 필요로 하는 Servelet을 생성하고 관리한다.
-
-web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 있다. 단순하게 서버에 서블릿을 만들었다고 해서 스스로 작동하는 것이 아니고, 서블릿을 관리해주는 것이 필요한데 그러한 역할을 하는 것이 바로 서블릿 컨테이너이다. 대표적인 서블릿 컨테이너로는 Tomcat이 있다. 서블릿 컨테이너는 다른말로 웹 컨테이너, 웹 어플리케이션 서버 라고도 불린다.
+> WebContainer는 사용하려는 웹 애플리케이션에 정의된 web.xml을 바탕으로 웹 애플리케이션으로 필요로 하는 Servelet을 생성하고 관리한다. 그밖에 
 
 ### 서블릿 컨테이너의 역할
 1. 웹서버와의 통신 지원
@@ -151,7 +149,7 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg5NjM0NjcwMywtMzE1OTk0NDE5LC0xMD
-gzODA1ODUzLC0xNjYxOTAzNzY4LDE2NTY5OTg2NjIsMTc3Mjc2
-OTg4MiwtNTkzODcxNzcwXX0=
+eyJoaXN0b3J5IjpbLTIxMTc3Mzg3MTIsLTMxNTk5NDQxOSwtMT
+A4MzgwNTg1MywtMTY2MTkwMzc2OCwxNjU2OTk4NjYyLDE3NzI3
+Njk4ODIsLTU5Mzg3MTc3MF19
 -->
