--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -123,7 +123,7 @@
 
 >> WebContainer(Servelet Container)의 역할은?
 >
-> WebContainer는 사용하려는 웹 애플리케이션에 정의된 web.xml을 바탕으로 웹 애플리케이션으로 필요로 하는 Servelet을 생성하고 관리한다. 그밖에 
+> WebContainer는 사용하려는 웹 애플리케이션에 정의된 web.xml을 바탕으로 웹 애플리케이션으로 필요로 하는 Servelet을 생성하고 관리한다. 그밖에 WebServer와 통신을 위한 API를 제공하고 요청이 들어올때 마다 쓰레드를 생성하여, 하나의 서블릿이 여러 요청을 처리하도록 한다.
 
 ### 서블릿 컨테이너의 역할
 1. 웹서버와의 통신 지원
@@ -149,7 +149,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMTc3Mzg3MTIsLTMxNTk5NDQxOSwtMT
+eyJoaXN0b3J5IjpbLTEzMTUxMjc0MDksLTMxNTk5NDQxOSwtMT
 A4MzgwNTg1MywtMTY2MTkwMzc2OCwxNjU2OTk4NjYyLDE3NzI3
 Njk4ODIsLTU5Mzg3MTc3MF19
 -->
