books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -117,25 +117,14 @@
 
 # 서버
 
-> WAS와 Web Server의 차이
->WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하기 위해 사용한다. 일반적인 WAS는 WebServer WebContainer(Servelet Container)로 구성된다. 
-> Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 기능이 가볍다. 아파치 서버, Nginx가 대표적이다. 
+>WAS와 Web Server의 차이는?
 
->> WebContainer(Servelet Container)의 역할은?
->
-> WebContainer는 사용하려는 웹 애플리케이션에 정의된 web.xml을 바탕으로 웹 애플리케이션으로 필요로 하는 Servelet을 생성하고 관리한다. 그밖에 WebServer와 통신을 위한 API를 제공하고 요청이 들어올때 마다 쓰레드를 생성하여, 하나의 서블릿이 여러 요청을 처리하도록 한다.
+WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하기 위해 사용한다. 일반적인 WAS는 WebServer WebContainer(Servelet Container)로 구성된다. 
+Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 기능이 가볍다. 아파치 서버, Nginx가 대표적이다. 
 
-### 서블릿 컨테이너의 역할
-1. 웹서버와의 통신 지원
-	- 서블릿 컨테이너는 서블릿과 웹서버가 손쉽게 통신할 수 있게 해줍니다. 일반적으로 우리는 소켓을 만들고 listen, accept 등을 해야하지만 서블릿 컨테이너는 이러한 기능을 API로 제공하여 복잡한 과정을 생략할 수 있게 해줍니다.
-2. 서블릿 생명 주기 관리
-	- 서블릿 컨테이너가 실행 되면, 서블릿 클래스를 인스턴스화시키고 초기화 시킨다.(탄생)
-	- 클라이언트로 부터 어떤 요청이 들어왔을때 그 요청에 해당하는 적절한 서블릿에 맵핑 시켜준다.(전성기)
-	- 서블릿이 사망하는 순간 서블릿 컨테이너는 가비지 컬렉션을 실행한다.(사망)
-3. 멀티 스레딩 관리
-	- 클라이언트의 요청이 들어올때마다 쓰레드를 생성한다. 하나의 서블릿에 여러개의 쓰레드가 동작하면서, 동시에 여러 클라이언트의 요청을 처리 할 수 있게 된다. 하지만 그렇다고 서블릿이 싱글턴 패턴을 따르지는 않는다. 여러 객체가 생성되어 여러 클라이언트 요청 처리가 가능하다. 
+>WebContainer(Servelet Container)의 역할은?
 
-
+ WebContainer는 사용하려는 웹 애플리케이션에 정의된 web.xml을 바탕으로 웹 애플리케이션으로 필요로 하는 Servelet을 생성하고 관리한다. 그밖에 WebServer와 통신을 위한 API를 제공하고 요청이 들어올때 마다 쓰레드를 생성하여, 하나의 서블릿이 여러 요청을 처리하도록 한다.
 
 >동기와 비동기처리의 차이 
 
@@ -149,7 +138,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTUxMjc0MDksLTMxNTk5NDQxOSwtMT
-A4MzgwNTg1MywtMTY2MTkwMzc2OCwxNjU2OTk4NjYyLDE3NzI3
-Njk4ODIsLTU5Mzg3MTc3MF19
+eyJoaXN0b3J5IjpbMTY0MzM2MDgwMiwtMzE1OTk0NDE5LC0xMD
+gzODA1ODUzLC0xNjYxOTAzNzY4LDE2NTY5OTg2NjIsMTc3Mjc2
+OTg4MiwtNTkzODcxNzcwXX0=
 -->
