--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -1,38 +1,51 @@
 
 # 4장 알고리즘의 시간 복잡도 분석(1)
 
-알고리즘을 평가하는 두 가지 기준
+알고리즘을 평가하는 두 가지 기준 :
 
 * 시간 : 알고리즘이 적은 시간을 사용한다는 것은 더 빠르게 동작한다는 이야기.
 * 공간 : 더 적은 용량의 메모리를 사용한다는 이야기. 알고리즘이 아무리 빠르더라도 너무 많은 메모리 공간을 사용하면 수행이 불가
 
 두 기준은 서로 상충하는 경우가 많다. 메모리 사용량을 늘려 속도를 높이거나, 속도를 희생해서 메모리 사용량을 줄이는 알고리즘들도 있다. 보통은 속도를 중시하는 경우가 많다.
 
-사실 한 프로그램의 수행 시간은 프로그래밍 언어, 하드웨어, 컴파일러 등의 환경적인 요소로 크게 변화할 수 있다. 심지어 한 알고리즘의 수행시간도 입력크기, 입력 데이터의 특성 등에 의해 변화한다.
+사실 한 ## 4.1 도입 
+
+프로그램의 수실행 시간은 프로그래밍 언어, 하드웨어, 컴파일러 등의 환경적인 요소로 크게 변화할 수 있다. 심지어 한 알고리즘의 수행시간도 입력크기, 입력 데이터의 특성 등에 의해 변화한알고리즘의 속도로 일반적으로 이야기하는 기준이 되기에는 부적합
+-> 프로그래밍 언어, 하드웨어, 운영체제, 컴파일러 등 많은 요소에 의해서 바뀔수 있다. 
+-> 입력크기, 특성에 따라 수행시간이 크게 달라진다.
+
+다수의 항목 중에 특정 항목이 전체의 대소를 좌지우지 한다는 것을 지배한다(dominate)라고 표현한다.  알고리즘 수행 시간을 지배하는 것은 일반적으로 반복문이다.
 
 ## 4.2 선형 시간 알고리즘 
 
 선형시간(linear) 알고리즘
-: 입력 데이터 크기에 1:1로 비례하는 수행시간을 보이는 알고리즘
+ : 입력 N(데이터의 크기)에 1:1로 비례하는 수행시간을 보이는 알고리즘
 
 
-M-이동 평균(M-moving average)
-: 시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는 통계 기법. 일반적으로 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 해당하는 M-이동 평균이다.
+M-따라 수행시간이 1:1로 비례한다. 
+
+이동 평균(M-moving average)
+ : 시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는값들 관찰시 유용한 통계적 기법준. 일반적으로 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 해당하는 M-이동 평균이다.
 
 M-이동평균을 계산은 이중 for 문으로 간단히 구현할 수 있다.
+M - 이동 평균 : 가장 최근 마지막  M개의 관찰 값의 평균
+
+for 문을 두번 사용해서 처리도 가능하다 
 ``` 
-N = Data.size;
-for(base = 0 + M-1; base < N){ // M-1번째 부터 시작하여 N까지 처리; 최근 M일을 계산하는데 초기 0~M-2일까지는 계산하지 않는다.
-int sum = 0;
+N = Ddata.size;
+for(base = 0 +i = M-1; basei < N){ // M-1번째 데이터에서 부터 시작하여 N까지 처리;, 최근 M일을 계산하는데 초기 0~M-2일까지는 계산하지 않는다.
+int s소 (M-1) - 0 + 1 = M 최소 M개의 데이터를 처리
+partialSum = 0;
 	for(j = 0; j < M; j++){ // 가장 최근 M일 
-	sum += Data[base-j];
+	s평균을 구하기 위해 M개의 데이터를 처리
+	partialSum += Data[basei-j];
 	}
-double average = sum / M;
+double average = spartialSum / M;
 }
 ```
 
 사실 M-이동중평균은 중복되는 계산을 줄임으로써 단일 for문으로 계산이 가능하다.  
-
+그러나 이것을 개선이 가능하다. **아이디어는 중복된 계산을 없애는것**
 0부터 M-1까지 데이터의 총합 : $Sum[0] = D[0] + D[1] + D[2] + ... + D[M-1]$
 1부터 M까지 데이터의 총합: $Sum[1] = D[1] + D[2] + ... + D[M]$
 ...
@@ -223,9 +236,9 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNzU5NTgxOCw3NTc3Mzk2MjUsMTkyMz
-M0MTA3OCwtMjIwNjg5NTksLTE5NTM3OTUxMjUsLTE5ODU5MTI2
-MjMsLTc0MzA0NjE2NSwtMTY3ODk5ODY5NywyMTkyMDMxODEsLT
-EzNjYwMjQyNDcsNTU4Njg4NjQsLTE1OTIwNDIwMTQsLTI3Njk4
-OTEyXX0=
+eyJoaXN0b3J5IjpbMTg5Njk1OTY2MiwtMTA3NTk1ODE4LDc1Nz
+czOTYyNSwxOTIzMzQxMDc4LC0yMjA2ODk1OSwtMTk1Mzc5NTEy
+NSwtMTk4NTkxMjYyMywtNzQzMDQ2MTY1LC0xNjc4OTk4Njk3LD
+IxOTIwMzE4MSwtMTM2NjAyNDI0Nyw1NTg2ODg2NCwtMTU5MjA0
+MjAxNCwtMjc2OTg5MTJdfQ==
 -->
