books/programming-interview/기술면접문제.md updated from https://stackedit.io/

--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -1,6 +1,7 @@
 # JAVA 
 
->자바의 원시 타입은? 
+>**자바의 원시 타입은?** 
+>자바에는 8가지 원시 타입이 있다. 
 
 
 >자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
@@ -211,7 +212,7 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg1MTIzNjMwOCw5NTQ0Mzk3ODIsLTgwNj
+eyJoaXN0b3J5IjpbLTk2MDA4OTc0OSw5NTQ0Mzk3ODIsLTgwNj
 k1MTc0NCwtOTIzNzczMzksLTE3MDA3NDYzNjEsLTY0NTQ5NDkw
 MiwtNDE2NjE5NjYzLDIwMTkzODA3MSw3NDEyOTU1NjMsMTU1Nj
 A1NDYxMCwtMzUxNDAzOTAyLC05NTU2NTU1NzcsMTkxNTA3NDk0
