--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -1,7 +1,7 @@
 # JAVA 
 
 >**자바의 원시 타입은?** 
->자바에는 8가지 원시 타입이 있다. 
+>자바에는 8가지 원시 타입이 있다. boolean, char, int
 
 
 >자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
@@ -212,11 +212,11 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk2MDA4OTc0OSw5NTQ0Mzk3ODIsLTgwNj
-k1MTc0NCwtOTIzNzczMzksLTE3MDA3NDYzNjEsLTY0NTQ5NDkw
-MiwtNDE2NjE5NjYzLDIwMTkzODA3MSw3NDEyOTU1NjMsMTU1Nj
-A1NDYxMCwtMzUxNDAzOTAyLC05NTU2NTU1NzcsMTkxNTA3NDk0
-OSwtMTUwMzYyMzA2Miw5NzgxMTU5MTMsNzY4Mzk4NDI5LDE2MT
-gzNjEzNTQsMjk1MDIzMTE4LDEyNzQyNTMyMDUsLTE2Njk0ODE5
-N119
+eyJoaXN0b3J5IjpbMTUxNDgzMzUzOCwtOTYwMDg5NzQ5LDk1ND
+QzOTc4MiwtODA2OTUxNzQ0LC05MjM3NzMzOSwtMTcwMDc0NjM2
+MSwtNjQ1NDk0OTAyLC00MTY2MTk2NjMsMjAxOTM4MDcxLDc0MT
+I5NTU2MywxNTU2MDU0NjEwLC0zNTE0MDM5MDIsLTk1NTY1NTU3
+NywxOTE1MDc0OTQ5LC0xNTAzNjIzMDYyLDk3ODExNTkxMyw3Nj
+gzOTg0MjksMTYxODM2MTM1NCwyOTUwMjMxMTgsMTI3NDI1MzIw
+NV19
 -->
