--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -1,7 +1,7 @@
 # JAVA 
 
 >**자바의 원시 타입은?** 
->자바에는 8가지 원시 타입이 있다. boolean, char, int
+>자바에는 8가지 원시 타입이 있다. boolean(1), byte(1), char(2), short(2), int(4), long(8), float, double, 
 
 
 >자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
@@ -212,11 +212,11 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUxNDgzMzUzOCwtOTYwMDg5NzQ5LDk1ND
-QzOTc4MiwtODA2OTUxNzQ0LC05MjM3NzMzOSwtMTcwMDc0NjM2
-MSwtNjQ1NDk0OTAyLC00MTY2MTk2NjMsMjAxOTM4MDcxLDc0MT
-I5NTU2MywxNTU2MDU0NjEwLC0zNTE0MDM5MDIsLTk1NTY1NTU3
-NywxOTE1MDc0OTQ5LC0xNTAzNjIzMDYyLDk3ODExNTkxMyw3Nj
-gzOTg0MjksMTYxODM2MTM1NCwyOTUwMjMxMTgsMTI3NDI1MzIw
-NV19
+eyJoaXN0b3J5IjpbLTEyNTAyMDAxMTEsLTk2MDA4OTc0OSw5NT
+Q0Mzk3ODIsLTgwNjk1MTc0NCwtOTIzNzczMzksLTE3MDA3NDYz
+NjEsLTY0NTQ5NDkwMiwtNDE2NjE5NjYzLDIwMTkzODA3MSw3ND
+EyOTU1NjMsMTU1NjA1NDYxMCwtMzUxNDAzOTAyLC05NTU2NTU1
+NzcsMTkxNTA3NDk0OSwtMTUwMzYyMzA2Miw5NzgxMTU5MTMsNz
+Y4Mzk4NDI5LDE2MTgzNjEzNTQsMjk1MDIzMTE4LDEyNzQyNTMy
+MDVdfQ==
 -->
