books/programming-interview/기술면접문제.md updated from https://stackedit.io/

--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -1,7 +1,7 @@
 # JAVA 
 
 >**자바의 원시 타입은?** 
->자바에는 8가지 원시 타입이 있다. boolean(1), byte(1), char(2), short(2), int(4), long(8), float(4), double(8), 
+>자바에는 8가지 원시 타입이 있다. boolean(1bit), byte(1), char(2), short(2), int(4), long(8), float(4), double(8), 
 
 
 >자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
@@ -212,7 +212,7 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4MDI0OTgyNSwtOTYwMDg5NzQ5LDk1ND
+eyJoaXN0b3J5IjpbMTk3MzQ5OTQ3NCwtOTYwMDg5NzQ5LDk1ND
 QzOTc4MiwtODA2OTUxNzQ0LC05MjM3NzMzOSwtMTcwMDc0NjM2
 MSwtNjQ1NDk0OTAyLC00MTY2MTk2NjMsMjAxOTM4MDcxLDc0MT
 I5NTU2MywxNTU2MDU0NjEwLC0zNTE0MDM5MDIsLTk1NTY1NTU3
