--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -1,9 +1,10 @@
 # JAVA 
 
 >**자바의 원시 타입은?** 
->자바에는 8가지 원시 타입이 있다. boolean(1byte), byte(1), char(2), short(2), int(4), long(8), float(4), double(8)
+>자바에는 8가지 원시 타입이 있다. boolean(1byte), byte(1), char(2), short(2), int(4), long(8), float(4), double(8). 
 
 >자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
+> Wrapper 클래스는 원시 타입에 대응하는 클래 가지고 이 클래스들은 불변 객체이다. 값을 저장하는 내부 필드가 final 키워드.
 
 >자바의 변수의 종류는? 
 
@@ -211,11 +212,11 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4Njg5Nzc0MjcsLTk2MDA4OTc0OSw5NT
-Q0Mzk3ODIsLTgwNjk1MTc0NCwtOTIzNzczMzksLTE3MDA3NDYz
-NjEsLTY0NTQ5NDkwMiwtNDE2NjE5NjYzLDIwMTkzODA3MSw3ND
-EyOTU1NjMsMTU1NjA1NDYxMCwtMzUxNDAzOTAyLC05NTU2NTU1
-NzcsMTkxNTA3NDk0OSwtMTUwMzYyMzA2Miw5NzgxMTU5MTMsNz
-Y4Mzk4NDI5LDE2MTgzNjEzNTQsMjk1MDIzMTE4LDEyNzQyNTMy
-MDVdfQ==
+eyJoaXN0b3J5IjpbMTk3MzgyMzcxOCwtMTg2ODk3NzQyNywtOT
+YwMDg5NzQ5LDk1NDQzOTc4MiwtODA2OTUxNzQ0LC05MjM3NzMz
+OSwtMTcwMDc0NjM2MSwtNjQ1NDk0OTAyLC00MTY2MTk2NjMsMj
+AxOTM4MDcxLDc0MTI5NTU2MywxNTU2MDU0NjEwLC0zNTE0MDM5
+MDIsLTk1NTY1NTU3NywxOTE1MDc0OTQ5LC0xNTAzNjIzMDYyLD
+k3ODExNTkxMyw3NjgzOTg0MjksMTYxODM2MTM1NCwyOTUwMjMx
+MThdfQ==
 -->
