--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -4,7 +4,7 @@
 >자바에는 8가지 원시 타입이 있다. boolean(1byte), byte(1), char(2), short(2), int(4), long(8), float(4), double(8). 
 
 >자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
-> Wrapper 클래스는 원시 타입에 대응하는 클래스이다.  객체 생성시 내부 필드에 final 키워드가 붙어 
+> Wrapper 클래스는 원시 타입에 대응하는 클래스이다.  객체 생성시 내부 필드에 final 키워드가 붙어있다. 즉 불변 객체이다. 원시 타입을 대응하는 Wrapper로 만들어 사용해야 할때가 있는데 이를 자동으로 해주는 것이 AutoBoxing이다. 
 
 >자바의 변수의 종류는? 
 
@@ -212,11 +212,11 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMyNzk3NjY0MCwtMTg2ODk3NzQyNywtOT
-YwMDg5NzQ5LDk1NDQzOTc4MiwtODA2OTUxNzQ0LC05MjM3NzMz
-OSwtMTcwMDc0NjM2MSwtNjQ1NDk0OTAyLC00MTY2MTk2NjMsMj
-AxOTM4MDcxLDc0MTI5NTU2MywxNTU2MDU0NjEwLC0zNTE0MDM5
-MDIsLTk1NTY1NTU3NywxOTE1MDc0OTQ5LC0xNTAzNjIzMDYyLD
-k3ODExNTkxMyw3NjgzOTg0MjksMTYxODM2MTM1NCwyOTUwMjMx
-MThdfQ==
+eyJoaXN0b3J5IjpbNTU2OTI1MjUwLC0zMjc5NzY2NDAsLTE4Nj
+g5Nzc0MjcsLTk2MDA4OTc0OSw5NTQ0Mzk3ODIsLTgwNjk1MTc0
+NCwtOTIzNzczMzksLTE3MDA3NDYzNjEsLTY0NTQ5NDkwMiwtND
+E2NjE5NjYzLDIwMTkzODA3MSw3NDEyOTU1NjMsMTU1NjA1NDYx
+MCwtMzUxNDAzOTAyLC05NTU2NTU1NzcsMTkxNTA3NDk0OSwtMT
+UwMzYyMzA2Miw5NzgxMTU5MTMsNzY4Mzk4NDI5LDE2MTgzNjEz
+NTRdfQ==
 -->
