books/programming-interview/기술면접문제.md updated from https://stackedit.io/

--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -3,10 +3,12 @@
 >**자바의 원시 타입은?** 
 >자바에는 8가지 원시 타입이 있다. boolean(1byte), byte(1), char(2), short(2), int(4), long(8), float(4), double(8). 
 
->자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
-> Wrapper 클래스는 원시 타입에 대응하는 클래스이다.  객체 생성시 내부 필드에 final 키워드가 붙어있다. 즉 불변 객체이다. 원시 타입을 대응하는 Wrapper로 만들어 사용해야 할때가 있는데 이를 자동으로 해주는 것이 AutoBoxing이다. 
+>**자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?**
+> Wrapper 클래스는 원시 타입에 대응하는 클래스이다.  객체 생성시 내부 필드에 final 키워드가 붙어있다. 즉 불변 객체이다. 원시 타입을 대응하는 Wrapper로 만들어 사용해야 할때가 있는데 이를 자동으로 해주는 것이 AutoBoxing이다. 반대는 UnBoxing이다. 
 
 >자바의 변수의 종류는? 
+>
+
 
 >자바의 클래스와 객체의 차이는? 
 
@@ -212,7 +214,7 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTU2OTI1MjUwLC0zMjc5NzY2NDAsLTE4Nj
+eyJoaXN0b3J5IjpbMzQ4MjI4Mzg2LC0zMjc5NzY2NDAsLTE4Nj
 g5Nzc0MjcsLTk2MDA4OTc0OSw5NTQ0Mzk3ODIsLTgwNjk1MTc0
 NCwtOTIzNzczMzksLTE3MDA3NDYzNjEsLTY0NTQ5NDkwMiwtND
 E2NjE5NjYzLDIwMTkzODA3MSw3NDEyOTU1NjMsMTU1NjA1NDYx
