--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -7,7 +7,7 @@
 > Wrapper 클래스는 원시 타입에 대응하는 클래스이다.  객체 생성시 내부 필드에 final 키워드가 붙어있다. 즉 불변 객체이다. 원시 타입을 대응하는 Wrapper로 만들어 사용해야 할때가 있는데 이를 자동으로 해주는 것이 AutoBoxing이다. 반대는 UnBoxing이다. 
 
 >자바의 변수의 종류는? 
->
+> 
 
 
 >자바의 클래스와 객체의 차이는? 
@@ -214,11 +214,11 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQ4MjI4Mzg2LC0zMjc5NzY2NDAsLTE4Nj
-g5Nzc0MjcsLTk2MDA4OTc0OSw5NTQ0Mzk3ODIsLTgwNjk1MTc0
-NCwtOTIzNzczMzksLTE3MDA3NDYzNjEsLTY0NTQ5NDkwMiwtND
-E2NjE5NjYzLDIwMTkzODA3MSw3NDEyOTU1NjMsMTU1NjA1NDYx
-MCwtMzUxNDAzOTAyLC05NTU2NTU1NzcsMTkxNTA3NDk0OSwtMT
-UwMzYyMzA2Miw5NzgxMTU5MTMsNzY4Mzk4NDI5LDE2MTgzNjEz
-NTRdfQ==
+eyJoaXN0b3J5IjpbMTY3NTk1NjgyMiwzNDgyMjgzODYsLTMyNz
+k3NjY0MCwtMTg2ODk3NzQyNywtOTYwMDg5NzQ5LDk1NDQzOTc4
+MiwtODA2OTUxNzQ0LC05MjM3NzMzOSwtMTcwMDc0NjM2MSwtNj
+Q1NDk0OTAyLC00MTY2MTk2NjMsMjAxOTM4MDcxLDc0MTI5NTU2
+MywxNTU2MDU0NjEwLC0zNTE0MDM5MDIsLTk1NTY1NTU3NywxOT
+E1MDc0OTQ5LC0xNTAzNjIzMDYyLDk3ODExNTkxMyw3NjgzOTg0
+MjldfQ==
 -->
