books/programming-interview/기술면접문제.md updated from https://stackedit.io/

--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -7,7 +7,7 @@
 > Wrapper 클래스는 원시 타입에 대응하는 클래스이다.  객체 생성시 내부 필드에 final 키워드가 붙어있다. 즉 불변 객체이다. 원시 타입을 대응하는 Wrapper로 만들어 사용해야 할때가 있는데 이를 자동으로 해주는 것이 AutoBoxing이다. 반대는 UnBoxing이다. 
 
 >자바의 변수의 종류는? 
-> 변수가 가지는 값의 종류에 따라 참조 변수(reference variable), 원시 변수(primitive variable)가 있다. 그리고 클래스에 선언한 위치에 딸
+> 변수가 가지는 값의 종류에 따라 참조 변수(reference variable), 원시 변수(primitive variable)가 있다. 그리고 클래스에 선언한 위치에 따라서 멤버 변수, 로컬 변수로 나뉜다. 멤버 변수는 다시 레퍼런스 변수와 클래스변수로 나뉘는데 클래스 변수는 St
 
 
 >자바의 클래스와 객체의 차이는? 
@@ -214,7 +214,7 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTU2NTk4MjY5LDM0ODIyODM4NiwtMzI3OT
+eyJoaXN0b3J5IjpbOTk4ODM3NDg0LDM0ODIyODM4NiwtMzI3OT
 c2NjQwLC0xODY4OTc3NDI3LC05NjAwODk3NDksOTU0NDM5Nzgy
 LC04MDY5NTE3NDQsLTkyMzc3MzM5LC0xNzAwNzQ2MzYxLC02ND
 U0OTQ5MDIsLTQxNjYxOTY2MywyMDE5MzgwNzEsNzQxMjk1NTYz
