--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -6,11 +6,11 @@
 >**자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?**
 > Wrapper 클래스는 원시 타입에 대응하는 클래스이다.  객체 생성시 내부 필드에 final 키워드가 붙어있다. 즉 불변 객체이다. 원시 타입을 대응하는 Wrapper로 만들어 사용해야 할때가 있는데 이를 자동으로 해주는 것이 AutoBoxing이다. 반대는 UnBoxing이다. 
 
->자바의 변수의 종류는? 
-> 변수가 가지는 값의 종류에 따라 참조 변수(reference variable), 원시 변수(primitive variable)가 있다. 그리고 클래스에 선언한 위치에 따라서 멤버 변수, 로컬 변수로 나뉜다. 멤버 변수는 다시 레퍼런스 변수와 클래스변수로 나뉘는데 클래스 변수는 St
+**>자바의 변수의 종류는?** 
+> 변수가 가지는 값의 종류에 따라 참조 변수(reference variable), 원시 변수(primitive variable)가 있다. 그리고 클래스에 선언한 위치에 따라서 멤버 변수, 로컬 변수로 나뉜다. 멤버 변수는 다시 인스턴스 변수와 클래스변수로 나뉘는데 클래스 변수는 Static이 붙은 정적 변수를 말한다. 
 
-
->자바의 클래스와 객체의 차이는? 
+**>자바의 클래스와 객체의 차이는?** 
+>
 
 >JVM의 역할은? 그리고 GC(가비지 컬렉션)은  어떤 역할을 하는가?
 
@@ -214,11 +214,11 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTk4ODM3NDg0LDM0ODIyODM4NiwtMzI3OT
-c2NjQwLC0xODY4OTc3NDI3LC05NjAwODk3NDksOTU0NDM5Nzgy
-LC04MDY5NTE3NDQsLTkyMzc3MzM5LC0xNzAwNzQ2MzYxLC02ND
-U0OTQ5MDIsLTQxNjYxOTY2MywyMDE5MzgwNzEsNzQxMjk1NTYz
-LDE1NTYwNTQ2MTAsLTM1MTQwMzkwMiwtOTU1NjU1NTc3LDE5MT
-UwNzQ5NDksLTE1MDM2MjMwNjIsOTc4MTE1OTEzLDc2ODM5ODQy
-OV19
+eyJoaXN0b3J5IjpbLTM1ODU2MDkzNiwzNDgyMjgzODYsLTMyNz
+k3NjY0MCwtMTg2ODk3NzQyNywtOTYwMDg5NzQ5LDk1NDQzOTc4
+MiwtODA2OTUxNzQ0LC05MjM3NzMzOSwtMTcwMDc0NjM2MSwtNj
+Q1NDk0OTAyLC00MTY2MTk2NjMsMjAxOTM4MDcxLDc0MTI5NTU2
+MywxNTU2MDU0NjEwLC0zNTE0MDM5MDIsLTk1NTY1NTU3NywxOT
+E1MDc0OTQ5LC0xNTAzNjIzMDYyLDk3ODExNTkxMyw3NjgzOTg0
+MjldfQ==
 -->
