--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -203,16 +203,10 @@ _"the microservice architectural style is an approach to developing a single app
 
 > **Docker는?**
 >Linux컨테이너를 만들고 사용할 수 있도록 하는 컨테이너화 기술이다. 도커는  **컨테이너 기반의 오픈소스 가상화 플랫폼**입니다. 다양한 프로그램, 실행환경을 컨테이너로 추상화하고 동일한 인터페이스를 제공하여 프로그램의 배포 및 관리를 단순하게 해줍니다. 백엔드 프로그램, 데이터베이스 서버, 메시지 큐등 어떤 프로그램도 컨테이너로 추상화할 수 있고 조립PC, AWS, Azure, Google cloud등 어디에서든 실행할 수 있습니다.
+>기존에는 OS를 가상화했다면
 
-컨테이너를 가장 잘 사용하고 있는 기업은 구글인데  [2014년 발표](https://speakerdeck.com/jbeda/containers-at-scale)  에 따르면 구글은 모든 서비스들이 컨테이너로 동작하고 매주 20억 개의 컨테이너를 구동 한다고 합니다.  갓구글
 
-**컨테이너(Container)**
-
-![docker container](https://subicura.com/assets/article_images/2017-01-19-docker-guide-for-beginners-1/docker-container.png)
-
-docker container
-
-컨테이너는 격리된 공간에서 프로세스가 동작하는 기술입니다. 가상화 기술의 하나지만 기존방식과는 차이가 있습니다.
+컨테이너는 격리된 공간에서 프로세스가 동작하는 기술입니다. 가상화 기술의 하나지만 기존방식과는 차이가 있다. 
 
 기존의 가상화 방식은 주로  **OS를 가상화**하였습니다.
 
@@ -230,11 +224,11 @@ docker container
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcwMjE4Nzc0MSwxMjI0MDQ2OTM3LDM0OD
-IyODM4NiwtMzI3OTc2NjQwLC0xODY4OTc3NDI3LC05NjAwODk3
-NDksOTU0NDM5NzgyLC04MDY5NTE3NDQsLTkyMzc3MzM5LC0xNz
-AwNzQ2MzYxLC02NDU0OTQ5MDIsLTQxNjYxOTY2MywyMDE5Mzgw
-NzEsNzQxMjk1NTYzLDE1NTYwNTQ2MTAsLTM1MTQwMzkwMiwtOT
-U1NjU1NTc3LDE5MTUwNzQ5NDksLTE1MDM2MjMwNjIsOTc4MTE1
-OTEzXX0=
+eyJoaXN0b3J5IjpbLTQ0NzM0ODEsMTIyNDA0NjkzNywzNDgyMj
+gzODYsLTMyNzk3NjY0MCwtMTg2ODk3NzQyNywtOTYwMDg5NzQ5
+LDk1NDQzOTc4MiwtODA2OTUxNzQ0LC05MjM3NzMzOSwtMTcwMD
+c0NjM2MSwtNjQ1NDk0OTAyLC00MTY2MTk2NjMsMjAxOTM4MDcx
+LDc0MTI5NTU2MywxNTU2MDU0NjEwLC0zNTE0MDM5MDIsLTk1NT
+Y1NTU3NywxOTE1MDc0OTQ5LC0xNTAzNjIzMDYyLDk3ODExNTkx
+M119
 -->
