--- a/books/programming-interview/기술면접문제.md
+++ b/books/programming-interview/기술면접문제.md
@@ -13,6 +13,7 @@
 >클래스는 생성할 객체의 일종의 명세서이다. 그리고 객체는 그러한 명세에 따라 생성되고 다른 객체와 상호작용하여 필요한 동작을 하는 주체다. 
 
 >JVM의 역할은? 그리고 GC(가비지 컬렉션)은  어떤 역할을 하는가?
+>
 
 >자바의 메모리 구조는? 변수별로 저장되는 위치는?
 
@@ -204,7 +205,7 @@ _"the microservice architectural style is an approach to developing a single app
 > **Docker는?**
 >Linux컨테이너를 만들고 사용할 수 있도록 하는 컨테이너화 기술이다. 도커는  **컨테이너 기반의 오픈소스 가상화 플랫폼**입니다. 다양한 프로그램, 실행환경을 컨테이너로 추상화하고 동일한 인터페이스를 제공하여 프로그램의 배포 및 관리를 단순하게 해줍니다. 백엔드 프로그램, 데이터베이스 서버, 메시지 큐등 어떤 프로그램도 컨테이너로 추상화할 수 있고 조립PC, AWS, Azure, Google cloud등 어디에서든 실행할 수 있습니다. 컨테이너는 격리된 공간에서 프로세스가 동작하는 기술입니다. 가상화 기술의 하나지만 기존방식과는 차이가 있다. 기존의 가상화 방식은 주로  **OS를 가상화**하였습니다. 추가적인 OS를 설치하여 가상화하는 방법은 어쨋든 성능문제가 있었고 이를 개선하기 위해  **프로세스를 격리**  하는 방식이 등장합니다.
 
-리눅스에서는 이 방식을 리눅스 컨테이너라고 하고 단순히 프로세스를 격리시키기 때문에 가볍고 빠르게 동작합니다. CPU나 메모리는 딱 프로세스가 필요한 만큼만 추가로 사용하고 성능적으로도 거어어어어의 손실이 없습니다.
+리눅스에서는 이 방식을 리눅스 컨테이너라고 하고 단순히 프로세스를 격리시키기 때문에 가볍고 빠르게 동작합니다. CPU나 메모리는 딱 프로세스가 필요한 만큼만 추가로 사용하고 성능적으로도 거어의 손실이 없습니다.
 
 
 # TOOL
@@ -216,11 +217,11 @@ _"the microservice architectural style is an approach to developing a single app
 > Written with [StackEdit](https://stackedit.io/).
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc2MTE3MDc4NSwxMjI0MDQ2OTM3LDM0OD
-IyODM4NiwtMzI3OTc2NjQwLC0xODY4OTc3NDI3LC05NjAwODk3
-NDksOTU0NDM5NzgyLC04MDY5NTE3NDQsLTkyMzc3MzM5LC0xNz
-AwNzQ2MzYxLC02NDU0OTQ5MDIsLTQxNjYxOTY2MywyMDE5Mzgw
-NzEsNzQxMjk1NTYzLDE1NTYwNTQ2MTAsLTM1MTQwMzkwMiwtOT
-U1NjU1NTc3LDE5MTUwNzQ5NDksLTE1MDM2MjMwNjIsOTc4MTE1
-OTEzXX0=
+eyJoaXN0b3J5IjpbLTE2Nzc1MzE1NDcsMTc2MTE3MDc4NSwxMj
+I0MDQ2OTM3LDM0ODIyODM4NiwtMzI3OTc2NjQwLC0xODY4OTc3
+NDI3LC05NjAwODk3NDksOTU0NDM5NzgyLC04MDY5NTE3NDQsLT
+kyMzc3MzM5LC0xNzAwNzQ2MzYxLC02NDU0OTQ5MDIsLTQxNjYx
+OTY2MywyMDE5MzgwNzEsNzQxMjk1NTYzLDE1NTYwNTQ2MTAsLT
+M1MTQwMzkwMiwtOTU1NjU1NTc3LDE5MTUwNzQ5NDksLTE1MDM2
+MjMwNjJdfQ==
 -->
