--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -2,9 +2,12 @@
 
 ## 원시변수(primitive type)
 
+Number, String, Boolean, null, undefined, Symbol
+
+
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MTU5MjM2Ml19
+eyJoaXN0b3J5IjpbLTM3NTY3NjEzNV19
 -->
