books/코어자바스크립트/1장 데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -1,13 +1,17 @@
 # 데이터 타입
 
-## 원시변수(primitive type)
+기본변수, 원시변수(primitive type)
+: Number, String, Boolean, null, undefined, Symbol
 
-Number, String, Boolean, null, undefined, Symbol
+참조변수(reference type)
+
+
+기본형(원시형)은 불변성이다. 또 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM3NTY3NjEzNV19
+eyJoaXN0b3J5IjpbLTMwNzkwODQ3M119
 -->
