books/코어자바스크립트/1장 데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -4,14 +4,14 @@
 : Number, String, Boolean, null, undefined, Symbol
 
 참조변수(reference type)
+: Array, Function, Date, RegExp, Map, Set 등
 
-
-기본형(원시형)은 불변성이다. 또 
+기본형(원시형)은 불변성을 가진다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMwNzkwODQ3M119
+eyJoaXN0b3J5IjpbMTQ3MjU2MTkyMl19
 -->
