--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -10,12 +10,14 @@
 
 ## 식별자와 변수
 
-보통 식별자와 변수를 혼용하는 경우가 많다. 변수는 변할 수 있는 무엇가를 말하며 무언가란 데이터를 말한다. 식수
+보통 식별자와 변수를 혼용하는 경우가 많다. 변수는 변할 수 있는 무엇가를 말하며 무언가란 데이터를 말한다. 식별자는 어떤 데이터를 식별하는데 사용하는 이르, 변수명이다. 
+
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIxMDE0MDMxOV19
+eyJoaXN0b3J5IjpbMzg4MTA5NTcwXX0=
 -->
