--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -12,6 +12,10 @@
 
 보통 식별자와 변수를 혼용하는 경우가 많다. 변수는 변할 수 있는 무엇가를 말하며 무언가란 데이터를 말한다. 식별자는 어떤 데이터를 식별하는데 사용하는 이름, 변수명이다. 
 
+## 기본형 데이터와 참조형 데이터
+
+변수와 상수의 차이는 변경 가능성의 차이가 있다. 불변값과 상수를 같은 개념으로 오해하기 쉬운데, 한 번 데이터 할당이 이루어진 변수 공간에 다른 데이터
+
 
 
 
@@ -19,5 +23,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2ODU3MTA1NzRdfQ==
+eyJoaXN0b3J5IjpbNDI1ODc0MjIwLC0xNjg1NzEwNTc0XX0=
 -->
