books/코어자바스크립트/1장 데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -14,7 +14,7 @@
 
 ## 기본형 데이터와 참조형 데이터
 
-변수와 상수의 차이는 변경 가능성의 차이가 있다. 불변값과 상수를 같은 개념으로 오해하기 쉬운데, 한 번 데이터 할당이 이루어진 변수 공간에 다른 데이터
+변수와 상수의 차이는 변경 가능성의 차이가 있다. 불변값과 상수를 같은 개념으로 오해하기 쉬운데, 한 번 데이터 할당이 이루어진 변수 공간에 다른 데이터를 재할당 할 수 있으면 불변값이고 아니면 상수다. 
 
 
 
@@ -23,5 +23,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDI1ODc0MjIwLC0xNjg1NzEwNTc0XX0=
+eyJoaXN0b3J5IjpbNTcwNDQ0NjY2LC0xNjg1NzEwNTc0XX0=
 -->
