--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -16,12 +16,22 @@
 
 변수와 상수의 차이는 변경 가능성의 차이가 있다. 불변값과 상수를 같은 개념으로 오해하기 쉬운데, 한 번 데이터 할당이 이루어진 변수 공간에 다른 데이터를 재할당 할 수 있으면 불변값이고 아니면 상수다. 
 
+## 불변 객체
 
+값으로 전달받은 객체에 변경을 가하더라도 원본 객체는 변하지 않아야 하는 경우, 불변객체를 사용할 수 있다. 
+
+```
+var user = {
+	name : 'scott',
+	gender : 'man'
+}; //{} ramda식으로 새로운 객체를 생성
+```
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTcwNDQ0NjY2LC0xNjg1NzEwNTc0XX0=
+eyJoaXN0b3J5IjpbLTE0MTEzODkyODgsLTE2ODU3MTA1NzRdfQ
+==
 -->
