books/코어자바스크립트/1장 데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -27,11 +27,14 @@ var user = {
 }; //{} ramda식으로 새로운 객체를 생성
 ```
 
+## 얕은 복사와 깊은 복사
+
+
+
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MTEzODkyODgsLTE2ODU3MTA1NzRdfQ
-==
+eyJoaXN0b3J5IjpbLTI5MDk5MTA1NywtMTY4NTcxMDU3NF19
 -->
