books/코어자바스크립트/1장 데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -29,12 +29,12 @@ var user = {
 
 ## 얕은 복사와 깊은 복사
 
-
+얕은 복사(shallow copy)는 바로 아래 단계의 값만 복사하는 방법이고, 깊은 복사(deep copy)는 내부의 모든 값을 하나씩 찾아서 복사하는 방법이다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5MDk5MTA1NywtMTY4NTcxMDU3NF19
+eyJoaXN0b3J5IjpbLTU1MTg1MDU4NywtMTY4NTcxMDU3NF19
 -->
