books/코어자바스크립트/1장 데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/1장 데이터타입.md
+++ b/books/코어자바스크립트/1장 데이터타입.md
@@ -33,6 +33,7 @@ var user = {
 
 객체의 깊은 복사를 수행하는 범용 함수
 ```
+
 ```
 
 JSON을 활용한 간단한 깊은 복사
@@ -44,5 +45,6 @@ JSON을 활용한 간단한 깊은 복사
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzU0NTQyOTM2LC0xNjg1NzEwNTc0XX0=
+eyJoaXN0b3J5IjpbMTg3ODMwODE2Niw3NTQ1NDI5MzYsLTE2OD
+U3MTA1NzRdfQ==
 -->
