books/코어자바스크립트/데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -37,14 +37,18 @@ var copyObjectDeep = function(target) {
 	var result = {};
 	if(typeof target === 'object' && target !== null){
 		for(var prop in target) {
-			result[]
+			result[prop] = copyObjectDeep(target[prop]);
 		}
+	} else {
+		result  = target;
 	}
+	return result;
 }
 ```
 
 JSON을 활용한 간단한 깊은 복사
 ```
+var copyObjectViaJSOn
 ```
 
 ## undefined와 null
@@ -52,5 +56,5 @@ JSON을 활용한 간단한 깊은 복사
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2MDA0NDI4OF19
+eyJoaXN0b3J5IjpbNjU5NTE2MzU0XX0=
 -->
