books/코어자바스크립트/데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -48,7 +48,9 @@ var copyObjectDeep = function(target) {
 
 JSON을 활용한 간단한 깊은 복사
 ```
-var copyObjectViaJSOn
+var copyObjectViaJSOn = function (target) {
+	return JSON.parse(JSON.stringify(target));
+}
 ```
 
 ## undefined와 null
@@ -56,5 +58,5 @@ var copyObjectViaJSOn
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjU5NTE2MzU0XX0=
+eyJoaXN0b3J5IjpbODA3NDkzOTM1XX0=
 -->
