--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -55,8 +55,12 @@ var copyObjectViaJSOn = function (target) {
 
 ## undefined와 null
 
+자바스크립트에는 값이 없음을 나타내는 값이 두가지가 있다. 
+두 값의 의미는 같은 것 같지만 미세하게 다르고, 사용하는 목적 또한 다르다. 
+
+undefined는 사용자가 명시적으로 지정할 수도 있지만, 값이 없을때 자바스크립트 엔진이 자동으로 부여하는 경우도 있다. 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODA3NDkzOTM1XX0=
+eyJoaXN0b3J5IjpbLTcwMzIzNzk5XX0=
 -->
