--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -57,9 +57,12 @@ var copyObjectViaJSOn = function (target) {
 
 자바스크립트에는 `값이 없음`을 나타내는 값으로 undefined와 null이 있다. 두 값의 의미는 같은 것 같지만 미세하게 다르고, 사용하는 목적 또한 다르다. 
 
-undefined는 사용자가 명시적으로 지정할 수도 있지만, 값이 없을때 자바스크립트 엔진이 자동으로 부여하는 경우도 있다. 
+undefined는 사용자가 명시적으로 지정할 수도 있지만, 값이 없을때 자바스크립트 엔진이 자동으로 부여하는 경우도 있다. 자바스크립트 엔진은 사용자가 응당 어떤 값을 지정할 것이라고 예상되는 상황에서도 실제로 그렇게 하지 않았을때 undefined를 반환한다. 
+
+[1] 값을 ㄷ 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTg1MzIwMjBdfQ==
+eyJoaXN0b3J5IjpbLTIxMzU4NTQwNjYsLTEzMTg1MzIwMjBdfQ
+==
 -->
