--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -59,10 +59,12 @@ var copyObjectViaJSOn = function (target) {
 
 undefined는 사용자가 명시적으로 지정할 수도 있지만, 값이 없을때 자바스크립트 엔진이 자동으로 부여하는 경우도 있다. 자바스크립트 엔진은 사용자가 응당 어떤 값을 지정할 것이라고 예상되는 상황에서도 실제로 그렇게 하지 않았을때 undefined를 반환한다. 
 
-[1] 값을 ㄷ 
+[1] 값을 대입하지 않은 변수, 즉 메모리 주소를 지정하지 않은 식별자에 접근할때 
+[2] 객체 내부에 존재하지 않는 프로퍼티에 접근할때
+[3] return 문이 없거나 호출되지 않는 함수의 실행 결과로 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMzU4NTQwNjYsLTEzMTg1MzIwMjBdfQ
+eyJoaXN0b3J5IjpbLTE3MDkwMDQ1MzAsLTEzMTg1MzIwMjBdfQ
 ==
 -->
