books/코어자바스크립트/데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -61,10 +61,12 @@ undefined는 사용자가 명시적으로 지정할 수도 있지만, 값이 없
 
 [1] 값을 대입하지 않은 변수, 즉 메모리 주소를 지정하지 않은 식별자에 접근할때 
 [2] 객체 내부에 존재하지 않는 프로퍼티에 접근할때
-[3] return 문이 없거나 호출되지 않는 함수의 실행 결과로 
+[3] return 문이 없거나 호출되지 않는 함수의 실행 결과
+
+ 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MDkwMDQ1MzAsLTEzMTg1MzIwMjBdfQ
-==
+eyJoaXN0b3J5IjpbLTE1NTgyMTkzMDIsLTE3MDkwMDQ1MzAsLT
+EzMTg1MzIwMjBdfQ==
 -->
