books/코어자바스크립트/데이터타입.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -65,12 +65,17 @@ undefined는 사용자가 명시적으로 지정할 수도 있지만, 값이 없
 ```
 var a;
 console.log(a); // undefined, 값을 대입하지 않는 변수
+
+var obj = {a:1};
+console.log(obj.a); //1
+console.log(obj.b); //undefiend,존재하지 않는 프로퍼티
+console.log(b); // refe
 ```
 
  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0Nzc2NTYzNDAsMTkwMjAyMTMyMCwtMT
-U1ODIxOTMwMiwtMTcwOTAwNDUzMCwtMTMxODUzMjAyMF19
+eyJoaXN0b3J5IjpbMTYxNjQxNTA4NywxOTAyMDIxMzIwLC0xNT
+U4MjE5MzAyLC0xNzA5MDA0NTMwLC0xMzE4NTMyMDIwXX0=
 -->
