--- a/books/코어자바스크립트/데이터타입.md
+++ b/books/코어자바스크립트/데이터타입.md
@@ -69,13 +69,17 @@ console.log(a); // undefined, 값을 대입하지 않는 변수
 var obj = {a:1};
 console.log(obj.a); //1
 console.log(obj.b); //undefiend,존재하지 않는 프로퍼티
-console.log(b); // refe
+console.log(b); // referenceError: b is not defined
+
+var func = function {};
+var c = func(); // 반환(return)값이 없으면, undefined를 반환한것으로 간주.
+console.log(c); // undefined 
 ```
 
  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYxNjQxNTA4NywxOTAyMDIxMzIwLC0xNT
-U4MjE5MzAyLC0xNzA5MDA0NTMwLC0xMzE4NTMyMDIwXX0=
+eyJoaXN0b3J5IjpbNTAzNjM1MzgyLDE5MDIwMjEzMjAsLTE1NT
+gyMTkzMDIsLTE3MDkwMDQ1MzAsLTEzMTg1MzIwMjBdfQ==
 -->
