--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -1,7 +1,8 @@
+컴퓨터의 동작과 이산 수학은 뗄레야 뗄 수 없는 관계이기 때문에, 연관된 정수론에 관련된 문제들도 자주 알고리즘 문제로 출제된다. 물론 수학 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMjA4ODQzNTMzLDczMDk5ODExNl19
 -->
