algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -3,7 +3,7 @@
 # 기본 개념
 
 소수(prime number)
-: 양의 약수가 1과 자기자신 밖에 없는 자연수. 소수의 반댓말로 세 개 이상의 양의 약수를 갖는 자연수를 합성수(composite number)라고 한다.
+: 양의 약수가 1과 자기자신 밖에 없는 자연수. 소수의 반댓말로 세 개 이상의 양의 약수를 갖는 자연수를 합성수(composite number)라고 한다. 예를 들어,
 
 
 
@@ -12,5 +12,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTU1Mjk5MzY2LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTEyNDYwMTE5NzAsNzMwOTk4MTE2XX0=
 -->
