--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -3,7 +3,7 @@
 # 기본 개념
 
 소수(prime number)
-: 양의 약수가 1과 자기자신 밖에 없는 자연수. 소수의 반댓말로 세 개 이상의 양의 약수를 갖는 자연수를 합성수(composite number)라고 한다. 예를 들어, 9는 1, 3, 9의 약수를 가지므로 합성수이다. 즉 1과 자기 자신을 제외한 약수가 존재하면 합성수가 된다. 그러면 1은 어떨까? 1
+: 양의 약수로 1과 자기자신만을 가지는 자연수를 말한다. 소수의 반댓말로 세 개 이상의 양의 약수를 갖는 자연수를 합성수(composite number)라고 한다. 예를 들어, 9는 1, 3, 9의 약수를 가지므로 합성수이다. 즉 1과 자기 자신을 제외한 약수가 존재하면 합성수가 된다. 그러면 1은 어떨까? 1인 스스로가 
 
 
 
@@ -12,5 +12,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA1NzYzNDI3NSw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTk3MjU3ODEyOSw3MzA5OTgxMTZdfQ==
 -->
