algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -8,14 +8,11 @@
 합성수(composite number)
 : 소수의 반댓말로 세 개 이상의 양의 약수를 갖는 자연수를 합성수라고 한다. 예를 들어, 9는 1, 3, 9의 약수를 가지므로 합성수이다. 
 
-1은 양의 약수로 자기자신인 1만 가
+1은 양의 약수로 자기자신인 1만 가지기 때문에 소수가 아니다. 그리고 합성수도 아니다. 이와 같은 성질때문에 1은 소수 관련 문제에서 가장 많이 걸리는 예외가 된다. 
 
-
-
-
-
+# 소수 판별
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDUxODA5MTMsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbODAxMDMyOTY4LDczMDk5ODExNl19
 -->
