algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -12,7 +12,10 @@
 
 # 소수 판별
 
+소수를 판별하는 가장 간단한 방법은 주어진 숫자 n에 대해서 2부터 n-1Rk
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODAxMDMyOTY4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTE2MDk2ODQwNzUsODAxMDMyOTY4LDczMD
+k5ODExNl19
 -->
