algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -12,10 +12,10 @@
 
 # 소수 판별
 
-소수를 판별하는 가장 간단한 방법은 주어진 숫자 n에 대해서 2부터 n-1Rk
+소수를 판별하는 가장 간단한 방법은 주어진 숫자 n에 대해서 2부터 n-1까지 모든 수를 순회하면서 이 중 n의 약수가 있는지 확인하는 것이다. 거기에 합성수 n이 $p*q$로 표현될때, 둘 중 하나는 항상 $\sqrt{n}$이하, 다른 한수는 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MDk2ODQwNzUsODAxMDMyOTY4LDczMD
-k5ODExNl19
+eyJoaXN0b3J5IjpbLTI0Njg4MTIzNiw4MDEwMzI5NjgsNzMwOT
+k4MTE2XX0=
 -->
