--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -16,10 +16,10 @@
 
 # 소인수 분해
 
-한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. 
+한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. 2부터 시작해 n의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때 마다 n을 이 숫자로 나눈다. 이 알고리즘은 n이 소수인 경우, $\sqrt$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQxNTQ2NzYxNyw4MDEwMzI5NjgsNzMwOT
-k4MTE2XX0=
+eyJoaXN0b3J5IjpbLTEyNjk4MTg2NjcsODAxMDMyOTY4LDczMD
+k5ODExNl19
 -->
