algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -17,7 +17,7 @@
 $$p >= \sqrt{p}, q >= \sqrt{q}$$
 $$\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q}$$ 
 여기서 만약 $p >= q$라고 가정한다면 
-$$q >=  \sqrt{p.q}$$
+$$p >= \sqrt{p}\cdot\sqrt{q} >= q$$
 
 
 
@@ -27,7 +27,7 @@ $$q >=  \sqrt{p.q}$$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODE2NzMzNDA2LC01NTI2MzA0NDksLTU1Mj
-UzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDczMDk5ODExNl19
-
+eyJoaXN0b3J5IjpbMTM0NDc1Mjk3NywtNTUyNjMwNDQ5LC01NT
+I1MzY2MzAsNDI5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZd
+fQ==
 -->
