algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -17,6 +17,7 @@
 
 만약 $p >= q(\sqrt{p} >=\sqrt{q})$라고 가정한다면 
 $$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})>= q$$
+$$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})>= q$$
 
 
 
@@ -26,7 +27,7 @@ $$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})>= q$$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM5NDU2OTE4MiwtNTUyNjMwNDQ5LC01NT
-I1MzY2MzAsNDI5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZd
-fQ==
+eyJoaXN0b3J5IjpbNDU4NDU5MTU3LC01NTI2MzA0NDksLTU1Mj
+UzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDczMDk5ODExNl19
+
 -->
