algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -16,8 +16,7 @@
 
 
 만약 $p >= q(\sqrt{p} >=\sqrt{q})$라고 가정한다면 
-$$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})>= q$$
-$$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})>= q$$
+$$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})$$$$q <= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})$$가 성립한다. 
 
 
 
@@ -27,7 +26,7 @@ $$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})>= q$$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDU4NDU5MTU3LC01NTI2MzA0NDksLTU1Mj
-UzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDczMDk5ODExNl19
-
+eyJoaXN0b3J5IjpbLTE4MzY1MDE3MzAsLTU1MjYzMDQ0OSwtNT
+UyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5NjgsNzMwOTk4MTE2
+XX0=
 -->
