--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -14,9 +14,8 @@
 
 소수를 판별하는 가장 간단한 방법은 주어진 숫자 n에 대해서 2부터 n-1까지 모든 수를 순회하면서 이 중 n의 약수가 있는지 확인하는 것이다. 거기에 합성수 n이 $p*q$로 표현될때, 둘 중 하나는 항상 $\sqrt{n}$이하, 다른 한수는 항상 $\sqrt n$이상이라는 점을 이용하면, n-1까지가 아닌 $\sqrt{n}$까지만 순회하도록 최적화를 할 수 있다. 무슨 말인지 좀 더 풀어 보자면 ... 
 
-
-만약 $p >= q(\sqrt{p} >=\sqrt{q})$라고 가정한다면 
-$$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})$$$$q <= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})$$가 성립한다. 
+만약 $p >= q(\sqrt{p} >=\sqrt{q})$라고 가정한다면 아래 식이 성립한다.
+$$q <= \sqrt{p}\cdot\sqrt{q})$$$$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})$$
 
 
 
@@ -26,7 +25,7 @@ $$p >= (\sqrt{p.q} = \sqrt{p}\cdot\sqrt{q})$$$$q <= (\sqrt{p.q} = \sqrt{p}\cdot\
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MzY1MDE3MzAsLTU1MjYzMDQ0OSwtNT
+eyJoaXN0b3J5IjpbLTEzNDUzNDg1NTMsLTU1MjYzMDQ0OSwtNT
 UyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5NjgsNzMwOTk4MTE2
 XX0=
 -->
