algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -16,7 +16,7 @@
 
 만약 $p >= q(\sqrt{p} >=\sqrt{q})$라고 가정한다면 아래 식이 성립한다.
 $$q <= \sqrt{p}\cdot\sqrt{q}$$$$p >= \sqrt{p}\cdot\sqrt{q}$$
-정리하자면 p가 q보다 같거나 큰 상황에서 
+정리하자면 p가 q보다 같거나 큰 상황에서 $\sqrt{p}\sqrt{q}$
 $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 
@@ -27,7 +27,7 @@ $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExODI5OTM5MTQsLTU1MjYzMDQ0OSwtNT
+eyJoaXN0b3J5IjpbLTExNjEwMTYzNDcsLTU1MjYzMDQ0OSwtNT
 UyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5NjgsNzMwOTk4MTE2
 XX0=
 -->
