--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -16,7 +16,7 @@
 
 만약 $p >= q(\sqrt{p} >=\sqrt{q})$라고 가정한다면 아래 식이 성립한다.
 $$q <= \sqrt{p}\cdot\sqrt{q}$$$$p >= \sqrt{p}\cdot\sqrt{q}$$
-정리하자면 p가 q보다 같거나 큰 상황에서 $\sqrt{p}\sqrt{q}$
+정리하자면 p가 q보다 같거나 큰 상황에서 $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 
 $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 
@@ -27,7 +27,7 @@ $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNjEwMTYzNDcsLTU1MjYzMDQ0OSwtNT
-UyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5NjgsNzMwOTk4MTE2
-XX0=
+eyJoaXN0b3J5IjpbLTg2NDU0MTc4NiwtNTUyNjMwNDQ5LC01NT
+I1MzY2MzAsNDI5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZd
+fQ==
 -->
