--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -13,9 +13,9 @@
 # 소수 판별
 
 소수를 판별하는 가장 간단한 방법은 주어진 숫자 n에 대해서 2부터 n-1까지 모든 수를 순회하면서 이 중 n의 약수가 있는지 확인하는 것이다. 
-합성수 $n$을 $p*q$로 표현했을때, 둘 중 하나는 항상 $\sqrt n$이상, 다른 수는 $\sqrt{n}$ 이하이다. 이 특성을 이용하면 $n-1$까지가 아닌 $\sqrt{n}$까지만 순회하면 소수인지 합성수인지 판별이 가능하다. 좀 더 자세히 풀어보자면 ...
+합성수 $n$을 $p*q$로 표현했을때, 둘 중 하나는 항상 $\sqrt n$이상, 다른 수는 $\sqrt{n}$ 이하이다. 이 특성을 이용하면 $n-1$까지가 아닌 $\sqrt{n}$까지만 순회하면 소수인지 합성수인지 판별이 가능하다. 
 
-만약 $p >= q(\sqrt{p} >=\sqrt{q})$라고 가정한다면 아래 식이 성립한다.
+$n = p*q$인 상황에서 만약 $p >= q(\sqrt{p} >=\sqrt{q})$라 하면 아래 식이 성립한다.
 $$q <= \sqrt{p}\cdot\sqrt{q}$$$$p >= \sqrt{p}\cdot\sqrt{q}$$
 정리하자면 p가 q보다 같거나 큰 상황에서 $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  
 $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
@@ -28,7 +28,7 @@ $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjM5MTczNTQ5LDc5MDkzOTMzNCwtNTUyNj
-MwNDQ5LC01NTI1MzY2MzAsNDI5NTg4MjI3LDgwMTAzMjk2OCw3
-MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbLTMwMzM1NzI4NCw3OTA5MzkzMzQsLTU1Mj
+YzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5Njgs
+NzMwOTk4MTE2XX0=
 -->
