algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -17,9 +17,10 @@
 
 $n = p*q$인 상황에서 만약 $p >= q(\sqrt{p} >=\sqrt{q})$라 하면 아래 식이 성립한다.
 $$q <= \sqrt{p}\cdot\sqrt{q}$$$$p >= \sqrt{p}\cdot\sqrt{q}$$
-정리하자면 p가 q보다 같거나 큰 상황에서 $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  
 $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
+$\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  확인이 가능하다. 
+예로 100을 생각해보자
 
 
 # 소인수 분해
@@ -28,7 +29,7 @@ $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMwMzM1NzI4NCw3OTA5MzkzMzQsLTU1Mj
-YzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5Njgs
-NzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNTY3OTg2OTAsLTMwMzM1NzI4NCw3OTA5Mz
+kzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4
+MDEwMzI5NjgsNzMwOTk4MTE2XX0=
 -->
