--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -20,7 +20,7 @@ $$q <= \sqrt{p}\cdot\sqrt{q}$$$$p >= \sqrt{p}\cdot\sqrt{q}$$
 $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  확인이 가능하다. 
-예로 100을 생각해보자
+예로 100을 생각해보자. 100은 [1, 100],[2, 50],[4, 25],[10,10],[20, 5], [50,2],[100,1]으로 표현 가능하
 
 
 # 소인수 분해
@@ -29,7 +29,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTY3OTg2OTAsLTMwMzM1NzI4NCw3OTA5Mz
-kzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4
-MDEwMzI5NjgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTExODUxMzI2MTIsLTMwMzM1NzI4NCw3OT
+A5MzkzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIy
+Nyw4MDEwMzI5NjgsNzMwOTk4MTE2XX0=
 -->
