--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -20,7 +20,7 @@ $$q <= \sqrt{p}\cdot\sqrt{q}$$$$p >= \sqrt{p}\cdot\sqrt{q}$$
 $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  확인이 가능하다. 
-예로 100을 생각해보자. 100은 [1, 100],[2, 50],[4, 25],[10,10],[20, 5], [50,2],[100,1]으로 표현 가능하
+예로 100을 $4 *25$로 표현하는 경우를 생각해보자. $25 >= \sqrt{100} >= 4$가 성립한다. 
 
 
 # 소인수 분해
@@ -29,7 +29,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExODUxMzI2MTIsLTMwMzM1NzI4NCw3OT
-A5MzkzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIy
-Nyw4MDEwMzI5NjgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTkwMzAzNjk5NCwtMzAzMzU3Mjg0LDc5MD
+kzOTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2MzAsNDI5NTg4MjI3
+LDgwMTAzMjk2OCw3MzA5OTgxMTZdfQ==
 -->
