--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -19,9 +19,7 @@ $n = p*q$인 상황에서 만약 $p >= q(\sqrt{p} >=\sqrt{q})$라 하면 아래 
 $$q <= \sqrt{p}\cdot\sqrt{q}$$$$p >= \sqrt{p}\cdot\sqrt{q}$$
 $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
-$\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  확인이 가능하다. 
-예로 100을 $4 *25$로 표현하는 경우를 생각해보자. $25 >= \sqrt{100} >= 4$가 성립한다. 즉 $n$값을 이루는 작은값이 어떤 값인지는 정확히는 모르겠으나 $\sqrt{n}$ 보다 같거나 작은것은 확실하기 때문에 
-
+$\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  확인이 가능하다.  즉 $n$값을 이루는 작은 값을 정확히는 모르겠으나 $\sqrt{n}$ 보다 같거나 작은것은 확실하기 때문에  $\sqrt{n}$까지만 확인해보면 된다는 것이다. 
 
 # 소인수 분해
 
@@ -29,7 +27,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzIzNDAyMDI2LDE5MDMwMzY5OTQsLTMwMz
-M1NzI4NCw3OTA5MzkzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMw
-LDQyOTU4ODIyNyw4MDEwMzI5NjgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTMwOTIyNzA2OSwxOTAzMDM2OTk0LC0zMD
+MzNTcyODQsNzkwOTM5MzM0LC01NTI2MzA0NDksLTU1MjUzNjYz
+MCw0Mjk1ODgyMjcsODAxMDMyOTY4LDczMDk5ODExNl19
 -->
