algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -23,14 +23,15 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 # 소인수 분해
 
-한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 시작해 n의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때 마다 n을 이 숫자로 나눈다.
+한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 값 중에서 
+$n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때마다 n을  숫자로 나눈다.
 
  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ1OTU4ODM3MSwyMDIwMTM4NjMxLDEzMD
-kyMjcwNjksMTkwMzAzNjk5NCwtMzAzMzU3Mjg0LDc5MDkzOTMz
-NCwtNTUyNjMwNDQ5LC01NTI1MzY2MzAsNDI5NTg4MjI3LDgwMT
-AzMjk2OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTE3NTM1MTQ3LDIwMjAxMzg2MzEsMTMwOT
+IyNzA2OSwxOTAzMDM2OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0
+LC01NTI2MzA0NDksLTU1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMD
+MyOTY4LDczMDk5ODExNl19
 -->
