--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -24,14 +24,14 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 # 소인수 분해
 
 한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 값 중에서 
-$n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때마다 n을  숫자로 나눈다.
+$n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때마다 n을 그 숫자로 나눈다. 다시 약수를 찾는 과정을 반복해서 소인수 분해를 진행한다.
 
  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE3NTM1MTQ3LDIwMjAxMzg2MzEsMTMwOT
-IyNzA2OSwxOTAzMDM2OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0
-LC01NTI2MzA0NDksLTU1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMD
-MyOTY4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTE3NjgxMzE4ODUsMjAyMDEzODYzMSwxMz
+A5MjI3MDY5LDE5MDMwMzY5OTQsLTMwMzM1NzI4NCw3OTA5Mzkz
+MzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4MD
+EwMzI5NjgsNzMwOTk4MTE2XX0=
 -->
