--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -21,6 +21,8 @@ $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  확인이 가능하다.  즉 $n$값을 이루는 작은 값을 정확히는 모르겠으나 $\sqrt{n}$ 보다 같거나 작은 것은 확실하기 때문에  $\sqrt{n}$까지만 확인해보면 된다는 것이다. 
 
+## 에라토스테네스의 체(eratosthenes)
+
 # 소인수 분해
 
 한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 값 중에서 
@@ -30,8 +32,8 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NjgxMzE4ODUsMjAyMDEzODYzMSwxMz
-A5MjI3MDY5LDE5MDMwMzY5OTQsLTMwMzM1NzI4NCw3OTA5Mzkz
-MzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4MD
-EwMzI5NjgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTk4OTAyMzAwNSwtMTc2ODEzMTg4NSwyMD
+IwMTM4NjMxLDEzMDkyMjcwNjksMTkwMzAzNjk5NCwtMzAzMzU3
+Mjg0LDc5MDkzOTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2MzAsND
+I5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZdfQ==
 -->
