--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -21,7 +21,10 @@ $$q <= \sqrt{p}\cdot\sqrt{q}<=p$$
 
 $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$까지만 판별해보면 합성수인지 아닌지  확인이 가능하다.  즉 $n$값을 이루는 작은 값을 정확히는 모르겠으나 $\sqrt{n}$ 보다 같거나 작은 것은 확실하기 때문에  $\sqrt{n}$까지만 확인해보면 된다는 것이다. 
 
-## 에라토스테네스의 체(eratosthenes)
+## [에라토스테네스의 체(eratosthenes)](https://ko.wikipedia.org/wiki/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98_%EC%B2%B4)
+
+주어진 숫자 n이하의 숫자 중에서 소수를 구하는 알고리즘이다. 
+
 
 # 소인수 분해
 
@@ -32,8 +35,9 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk4OTAyMzAwNSwtMTc2ODEzMTg4NSwyMD
-IwMTM4NjMxLDEzMDkyMjcwNjksMTkwMzAzNjk5NCwtMzAzMzU3
-Mjg0LDc5MDkzOTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2MzAsND
-I5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTA1NTQ0NTQ3MiwtOTg5MDIzMDA1LC0xNz
+Y4MTMxODg1LDIwMjAxMzg2MzEsMTMwOTIyNzA2OSwxOTAzMDM2
+OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0LC01NTI2MzA0NDksLT
+U1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDczMDk5ODEx
+Nl19
 -->
