algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -23,7 +23,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 ## [에라토스테네스의 체(eratosthenes)](https://ko.wikipedia.org/wiki/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98_%EC%B2%B4)
 
-주어진 숫자 n이하의 숫자 중에서 소수를 구하는 알고리즘이다. 
+주어진 숫자 n이하의 숫자 중에서 소수를 구하는 알고리즘이다. 1이하의 수는
 
 
 # 소인수 분해
@@ -35,9 +35,9 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA1NTQ0NTQ3MiwtOTg5MDIzMDA1LC0xNz
-Y4MTMxODg1LDIwMjAxMzg2MzEsMTMwOTIyNzA2OSwxOTAzMDM2
-OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0LC01NTI2MzA0NDksLT
-U1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDczMDk5ODEx
-Nl19
+eyJoaXN0b3J5IjpbNjEyMDc4Mjk1LDEwNTU0NDU0NzIsLTk4OT
+AyMzAwNSwtMTc2ODEzMTg4NSwyMDIwMTM4NjMxLDEzMDkyMjcw
+NjksMTkwMzAzNjk5NCwtMzAzMzU3Mjg0LDc5MDkzOTMzNCwtNT
+UyNjMwNDQ5LC01NTI1MzY2MzAsNDI5NTg4MjI3LDgwMTAzMjk2
+OCw3MzA5OTgxMTZdfQ==
 -->
