algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -27,7 +27,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 ![enter image description here](https://upload.wikimedia.org/wikipedia/commons/b/b9/Sieve_of_Eratosthenes_animation.gif)
 
-위 옞
+위 예제는 120의 수를 다루었다. 2부터 시작하여 
 
 # 소인수 분해
 
@@ -38,10 +38,10 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTgyOTUwNDc5LDExMzM1NjIzNSwtMTA2OD
-k0NzcyMywtMTcyMTQwNjAwNiwxMDU1NDQ1NDcyLC05ODkwMjMw
-MDUsLTE3NjgxMzE4ODUsMjAyMDEzODYzMSwxMzA5MjI3MDY5LD
-E5MDMwMzY5OTQsLTMwMzM1NzI4NCw3OTA5MzkzMzQsLTU1MjYz
-MDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5NjgsNz
-MwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbMTA5NzM2NTAzNSwxMTMzNTYyMzUsLTEwNj
+g5NDc3MjMsLTE3MjE0MDYwMDYsMTA1NTQ0NTQ3MiwtOTg5MDIz
+MDA1LC0xNzY4MTMxODg1LDIwMjAxMzg2MzEsMTMwOTIyNzA2OS
+wxOTAzMDM2OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0LC01NTI2
+MzA0NDksLTU1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LD
+czMDk5ODExNl19
 -->
