algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -27,7 +27,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 ![enter image description here](https://upload.wikimedia.org/wikipedia/commons/b/b9/Sieve_of_Eratosthenes_animation.gif)
 
-위 예제는 120의 수를 다루었다. 2부터 시작하는데, 2는 소수이기 때문에 2의 배수에 해당하는 모든 수는 합성수이므
+위 예제는 120의 수를 다루었다. 2부터 120까지 판별해야하는 수의 집합을 만든다. 그리고 2부터 시작하며 2는 소수이다. 따라서 2의 배수에 해당하는 모든 수는 합성수이기 때
 
 # 소인수 분해
 
@@ -38,10 +38,10 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc2Mzc3ODg4OCwxMDk3MzY1MDM1LDExMz
-M1NjIzNSwtMTA2ODk0NzcyMywtMTcyMTQwNjAwNiwxMDU1NDQ1
-NDcyLC05ODkwMjMwMDUsLTE3NjgxMzE4ODUsMjAyMDEzODYzMS
-wxMzA5MjI3MDY5LDE5MDMwMzY5OTQsLTMwMzM1NzI4NCw3OTA5
-MzkzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNy
-w4MDEwMzI5NjgsNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTU3NzIxMTkzLDEwOTczNjUwMzUsMTEzMz
+U2MjM1LC0xMDY4OTQ3NzIzLC0xNzIxNDA2MDA2LDEwNTU0NDU0
+NzIsLTk4OTAyMzAwNSwtMTc2ODEzMTg4NSwyMDIwMTM4NjMxLD
+EzMDkyMjcwNjksMTkwMzAzNjk5NCwtMzAzMzU3Mjg0LDc5MDkz
+OTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2MzAsNDI5NTg4MjI3LD
+gwMTAzMjk2OCw3MzA5OTgxMTZdfQ==
 -->
