algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -31,17 +31,17 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 # 소인수 분해
 
-한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 값 중에서 $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때마다 n을 그 숫자로 나눈다. 다시 약수를 찾는 과정을 반복해서 소인수 분해를 진행한다.
+한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 값 중에서 $n$ 소인수가 될 수 있는 수들을 순회하면서, n의 약수를 찾을때마다 n을 그 숫자로 나눈다. 다시 약수를 찾는 과정을 반복해서 소인수 분해를 진행한다.
 
  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMzkxNjA5OTAsLTE1MDE4NTQ1MTIsLT
-E2OTE3ODQ0OTksMTA5NzM2NTAzNSwxMTMzNTYyMzUsLTEwNjg5
-NDc3MjMsLTE3MjE0MDYwMDYsMTA1NTQ0NTQ3MiwtOTg5MDIzMD
-A1LC0xNzY4MTMxODg1LDIwMjAxMzg2MzEsMTMwOTIyNzA2OSwx
-OTAzMDM2OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0LC01NTI2Mz
-A0NDksLTU1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDcz
-MDk5ODExNl19
+eyJoaXN0b3J5IjpbMTkwOTUzMzk0NiwtMjAzOTE2MDk5MCwtMT
+UwMTg1NDUxMiwtMTY5MTc4NDQ5OSwxMDk3MzY1MDM1LDExMzM1
+NjIzNSwtMTA2ODk0NzcyMywtMTcyMTQwNjAwNiwxMDU1NDQ1ND
+cyLC05ODkwMjMwMDUsLTE3NjgxMzE4ODUsMjAyMDEzODYzMSwx
+MzA5MjI3MDY5LDE5MDMwMzY5OTQsLTMwMzM1NzI4NCw3OTA5Mz
+kzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4
+MDEwMzI5NjhdfQ==
 -->
