algorithms/정수론 알고리즘.md updated from https://stackedit.io/

--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -35,13 +35,14 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
  
 
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkwOTUzMzk0NiwtMjAzOTE2MDk5MCwtMT
-UwMTg1NDUxMiwtMTY5MTc4NDQ5OSwxMDk3MzY1MDM1LDExMzM1
-NjIzNSwtMTA2ODk0NzcyMywtMTcyMTQwNjAwNiwxMDU1NDQ1ND
-cyLC05ODkwMjMwMDUsLTE3NjgxMzE4ODUsMjAyMDEzODYzMSwx
-MzA5MjI3MDY5LDE5MDMwMzY5OTQsLTMwMzM1NzI4NCw3OTA5Mz
-kzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4
-MDEwMzI5NjhdfQ==
+eyJoaXN0b3J5IjpbMTYwNDcyMDgwOCwxOTA5NTMzOTQ2LC0yMD
+M5MTYwOTkwLC0xNTAxODU0NTEyLC0xNjkxNzg0NDk5LDEwOTcz
+NjUwMzUsMTEzMzU2MjM1LC0xMDY4OTQ3NzIzLC0xNzIxNDA2MD
+A2LDEwNTU0NDU0NzIsLTk4OTAyMzAwNSwtMTc2ODEzMTg4NSwy
+MDIwMTM4NjMxLDEzMDkyMjcwNjksMTkwMzAzNjk5NCwtMzAzMz
+U3Mjg0LDc5MDkzOTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2MzAs
+NDI5NTg4MjI3XX0=
 -->
