algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -8,9 +8,9 @@
 
 두 기준은 서로 상충하는 경우가 많다. 메모리 사용량을 늘려 속도를 높이거나, 속도를 희생해서 메모리 사용량을 줄이는 알고리즘들도 있다. 보통은 속도를 중시하는 경우가 많다.
 
-사실 한 ## 4.1 도입 
+## 4.1 도입 
 
-프로그램의 수실행 시간은 프로그래밍 언어, 하드웨어, 컴파일러 등의 환경적인 요소로 크게 변화할 수 있다. 심지어 한 알고리즘의 수행시간도 입력크기, 입력 데이터의 특성 등에 의해 변화한알고리즘의 속도로 일반적으로 이야기하는 기준이 되기에는 부적합
+프로그램의 실행 시간은 프로그래밍 언어, 하드웨어, 컴파일러 등의 환경적인 요소로 크게 변화할 수 있다. 심지어 같은 알고리즘의 수행시간도 입력크기, 입력 데이터의 특성 등에 의해 변화한알고리즘의 속도로 일반적으로 이야기하는 기준이 되기에는 부적합
 -> 프로그래밍 언어, 하드웨어, 운영체제, 컴파일러 등 많은 요소에 의해서 바뀔수 있다. 
 -> 입력크기, 특성에 따라 수행시간이 크게 달라진다.
 
@@ -236,9 +236,9 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg5Njk1OTY2MiwtMTA3NTk1ODE4LDc1Nz
-czOTYyNSwxOTIzMzQxMDc4LC0yMjA2ODk1OSwtMTk1Mzc5NTEy
-NSwtMTk4NTkxMjYyMywtNzQzMDQ2MTY1LC0xNjc4OTk4Njk3LD
-IxOTIwMzE4MSwtMTM2NjAyNDI0Nyw1NTg2ODg2NCwtMTU5MjA0
-MjAxNCwtMjc2OTg5MTJdfQ==
+eyJoaXN0b3J5IjpbLTE5MjIwNzcyOTUsMTg5Njk1OTY2MiwtMT
+A3NTk1ODE4LDc1NzczOTYyNSwxOTIzMzQxMDc4LC0yMjA2ODk1
+OSwtMTk1Mzc5NTEyNSwtMTk4NTkxMjYyMywtNzQzMDQ2MTY1LC
+0xNjc4OTk4Njk3LDIxOTIwMzE4MSwtMTM2NjAyNDI0Nyw1NTg2
+ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ==
 -->
