algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -11,10 +11,6 @@
 ## 4.1 도입 
 
 프로그램의 소요시간은 프로그래밍 언어, 하드웨어, 컴파일러 등의 환경적인 요소로 크게 변화할 수 있다. 심지어 같은 알고리즘의 수행시간도 입력크기, 입력 데이터의 특성 등에 의해 변화한다. 
-프로그램의 소요 시간은 ...
--> 프로그래밍 언어, 하드웨어, 운영체제, 컴파일러 등 많은 요소에 의해서 변화한다. 
--> 입력크기, 특성에 따라 수행시간이 크게 달라진다.
-
 다수의 항목 중에 특정 항목이 전체의 대소를 좌지우지 한다는 것을 지배한다(dominate)라고 표현한다.  알고리즘 수행 시간을 지배하는 것은 일반적으로 반복문이다.
 
 ## 4.2 선형 시간 알고리즘 
@@ -22,11 +18,8 @@
 선형시간(linear) 알고리즘
  : 입력 N(데이터의 크기)에 1:1로 비례하는 수행시간을 보이는 알고리즘
 
-
-M-따라 수행시간이 1:1로 비례한다. 
-
-이동 평균(M-moving average)
- : 시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는값들 관찰시 유용한 통계적 기법준. 일반적으로 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 해당하는 M-이동 평균이다.
+### M-이동 평균(M-moving average)
+시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는값들 관찰시 유용한 통계적 기법준. 일반적으로 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 해당하는 M-이동 평균이다.
 
 M-이동평균을 계산은 이중 for 문으로 간단히 구현할 수 있다.
 M - 이동 평균 : 가장 최근 마지막  M개의 관찰 값의 평균
@@ -237,9 +230,9 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTM5NDQyNDQsMTg5Njk1OTY2MiwtMTA3NT
-k1ODE4LDc1NzczOTYyNSwxOTIzMzQxMDc4LC0yMjA2ODk1OSwt
-MTk1Mzc5NTEyNSwtMTk4NTkxMjYyMywtNzQzMDQ2MTY1LC0xNj
-c4OTk4Njk3LDIxOTIwMzE4MSwtMTM2NjAyNDI0Nyw1NTg2ODg2
-NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ==
+eyJoaXN0b3J5IjpbLTE4MDI0OTI3MDQsMTg5Njk1OTY2MiwtMT
+A3NTk1ODE4LDc1NzczOTYyNSwxOTIzMzQxMDc4LC0yMjA2ODk1
+OSwtMTk1Mzc5NTEyNSwtMTk4NTkxMjYyMywtNzQzMDQ2MTY1LC
+0xNjc4OTk4Njk3LDIxOTIwMzE4MSwtMTM2NjAyNDI0Nyw1NTg2
+ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ==
 -->
