algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -26,9 +26,9 @@
 책에서는 사진이 날짜별로 정렬되어 있고 특정 사진을 찾으려고 한다. 매번 확인 할때마다 확인해야 할 사진의 수자 절반씩 줄어든다. 
 $$1,000,000 > 500,000 > 250,000 > 125,000 > ... > 3 > 1$$
 
-즉 $log N$의 의미는 즉 주어진 N에 대해서 절반씩 몇번을 나누어야 원하는 N을 찾을까?에 대한 답이다. 
+즉 $log N$의 의미는 즉 `주어진 N에 대해서 절반씩 몇번을 나누어야 원하는 값을 찾을 수 있을까?`에 대한 답이다. 
 
-### 이진 탐색
+### 이진 탐색(Binary Search)
 
 이진 탐색이 하는 일의 정의
 binsearch(A[], x) = 오름 차순으로 정렬된 배열  A와 찾고 싶은 값  x가 주어질 때 $A[i-1] < x <= A[i]$인 i를 반환한다. 
@@ -191,10 +191,10 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1OTEzNTQ3NCwtMTgwMjQ5MjcwNCwxOD
-k2OTU5NjYyLC0xMDc1OTU4MTgsNzU3NzM5NjI1LDE5MjMzNDEw
-NzgsLTIyMDY4OTU5LC0xOTUzNzk1MTI1LC0xOTg1OTEyNjIzLC
-03NDMwNDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAzMTgxLC0xMzY2
-MDI0MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl
-19
+eyJoaXN0b3J5IjpbNDk2NDQ5Njk0LC0xODAyNDkyNzA0LDE4OT
+Y5NTk2NjIsLTEwNzU5NTgxOCw3NTc3Mzk2MjUsMTkyMzM0MTA3
+OCwtMjIwNjg5NTksLTE5NTM3OTUxMjUsLTE5ODU5MTI2MjMsLT
+c0MzA0NjE2NSwtMTY3ODk5ODY5NywyMTkyMDMxODEsLTEzNjYw
+MjQyNDcsNTU4Njg4NjQsLTE1OTIwNDIwMTQsLTI3Njk4OTEyXX
+0=
 -->
