algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -37,7 +37,7 @@ binsearch(A[], x) = 오름 차순으로 정렬된 배열  A와 찾고 싶은 값
 
 C++ 표준 라이브러리에는 두개의 이진 탐색 함수가 존재, 가장 앞에 있는 것을 반환하는 lower_bound()와 가장 뒤의 것을 반환하는 upper_bound()
 
-## 4.4 지수 시간 알고리즘
+## 4.4 다항 시간 이상 알고리즘
 
 ### 다항 시간 알고리즘
 변수 $N$, $N^2$ 그 외의 거듭제곱들의 선형 결합으로 이루어진 식들을 다항식이라고 부른다. 사실 다항 시간 알고리즘에 분류가 되는 알고리즘 간에도 엄청난 시간 차이가 날 수 있다.  $N^2, N^3, ..., N^{100}$ 모두 같은 다항시간이다. 그런데도 이런 부류를 묶은 이유는 다항 시간 알고리즘보다 훨씬 더 오래 걸리는 알고리즘들이 있기 때문이다.
@@ -187,10 +187,10 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MDYzOTEwNjUsNDk2NDQ5Njk0LC0xOD
-AyNDkyNzA0LDE4OTY5NTk2NjIsLTEwNzU5NTgxOCw3NTc3Mzk2
-MjUsMTkyMzM0MTA3OCwtMjIwNjg5NTksLTE5NTM3OTUxMjUsLT
-E5ODU5MTI2MjMsLTc0MzA0NjE2NSwtMTY3ODk5ODY5NywyMTky
-MDMxODEsLTEzNjYwMjQyNDcsNTU4Njg4NjQsLTE1OTIwNDIwMT
-QsLTI3Njk4OTEyXX0=
+eyJoaXN0b3J5IjpbMTEyNDgzOTc3LDQ5NjQ0OTY5NCwtMTgwMj
+Q5MjcwNCwxODk2OTU5NjYyLC0xMDc1OTU4MTgsNzU3NzM5NjI1
+LDE5MjMzNDEwNzgsLTIyMDY4OTU5LC0xOTUzNzk1MTI1LC0xOT
+g1OTEyNjIzLC03NDMwNDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAz
+MTgxLC0xMzY2MDI0MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC
+0yNzY5ODkxMl19
 -->
